<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/weatherViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/card_start_end_margin"
    android:layout_marginBottom="@dimen/card_distance">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorBackground"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="1dp"
        card_view:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardViewWeatherItemCityName"
                style="@style/cityTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginTop="@dimen/default_top_margin"

                android:text="@string/astana"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timeLblTxtView"
                style="@style/defaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginTop="@dimen/main_secondary_margin"
                android:text="@string/time"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/cardViewWeatherItemCityName" />

            <TextView
                android:id="@+id/cardViewWeatherTimeTxtView"
                style="@style/defaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_example"
                card_view:layout_constraintStart_toEndOf="@+id/timeLblTxtView"
                card_view:layout_constraintTop_toBottomOf="@id/cardViewWeatherItemCityName" />

            <TextView
                android:id="@+id/tempLblTxtView"
                style="@style/defaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/temp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/cardViewWeatherTimeTxtView" />

            <TextView
                android:id="@+id/cardViewWeatherItemTempTextView"
                style="@style/defaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="12dp"
                android:text="@string/example_temp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/tempLblTxtView"
                card_view:layout_constraintTop_toBottomOf="@id/cardViewWeatherTimeTxtView" />

            <ImageView
                android:id="@+id/cardViewWeatherItemArrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>